Enhance booking details, standardize footer, and polish landing page visuals