@@ -2,8 +2,11 @@ package com.uniflowx.smartcampus.config;
 
 import com.uniflowx.smartcampus.security.AuthEntryPointJwt;
 import com.uniflowx.smartcampus.security.AuthTokenFilter;
+<<<<<<< HEAD
 import com.uniflowx.smartcampus.security.oauth2.HttpCookieOAuth2AuthorizationRequestRepository;
 import com.uniflowx.smartcampus.security.oauth2.OAuth2LoginFailureHandler;
+=======
+>>>>>>> 206b7e2 (Enhance booking details, standardize footer, and polish landing page visuals)
 import com.uniflowx.smartcampus.security.oauth2.OAuth2LoginSuccessHandler;
 import com.uniflowx.smartcampus.security.services.UserDetailsServiceImpl;
 import org.springframework.context.annotation.Bean;
@@ -19,20 +22,27 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 <<<<<<< HEAD
+<<<<<<< HEAD
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 =======
+=======
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+>>>>>>> 206b7e2 (Enhance booking details, standardize footer, and polish landing page visuals)
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+<<<<<<< HEAD
 import java.util.List;
 >>>>>>> f289f6b (Update Facilities Catalogue with Base64 image support and UI enhancements)
 
 import java.util.Arrays;
+=======
+>>>>>>> 206b7e2 (Enhance booking details, standardize footer, and polish landing page visuals)
 
 @Configuration
 @EnableWebSecurity
@@ -42,6 +52,7 @@ public class SecurityConfig {
     private final UserDetailsServiceImpl userDetailsService;
     private final AuthEntryPointJwt unauthorizedHandler;
     private final OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler;
+<<<<<<< HEAD
     private final OAuth2LoginFailureHandler oAuth2LoginFailureHandler;
     private final HttpCookieOAuth2AuthorizationRequestRepository httpCookieOAuth2AuthorizationRequestRepository;
 
@@ -135,17 +146,70 @@ public class SecurityConfig {
 >>>>>>> f289f6b (Update Facilities Catalogue with Base64 image support and UI enhancements)
         
         return http.build();
+=======
+
+    public SecurityConfig(UserDetailsServiceImpl userDetailsService, 
+                          AuthEntryPointJwt unauthorizedHandler,
+                          OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler) {
+        this.userDetailsService = userDetailsService;
+        this.unauthorizedHandler = unauthorizedHandler;
+        this.oAuth2LoginSuccessHandler = oAuth2LoginSuccessHandler;
+    }
+
+    @Bean
+    public AuthTokenFilter authenticationJwtTokenFilter() {
+        return new AuthTokenFilter();
+    }
+
+    @Bean
+    public DaoAuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
+        return authProvider;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+        return authConfig.getAuthenticationManager();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+>>>>>>> 206b7e2 (Enhance booking details, standardize footer, and polish landing page visuals)
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174", "http://localhost:5175"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:5174", "http://localhost:5175"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http.csrf(csrf -> csrf.disable())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/login/**").permitAll()
+                .anyRequest().authenticated()
+            )
+            .oauth2Login(oauth2 -> oauth2
+                .successHandler(oAuth2LoginSuccessHandler)
+            );
+
+        http.authenticationProvider(authenticationProvider());
+        http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
 }
